# daytona-ensamble

./: README.md  generate_results_html.py  main.py  pyproject.toml  results_summary.html  setup.sh
MASK_variants_marketplace/: rust_style_types.json  test_driven_thinker.json
agents/: martian_client.py  orchestrator.py  variants.py
human_eval/: human_eval_loader.py
models/: types.py
results/run_4213a0/baseline/: payload.py  prompt.txt  result.json
results/run_4213a0/memory_efficient/: payload.py  prompt.txt  response.txt  result.json  solution.py
results/run_4213a0/no_external_libs/: prompt.txt  result.json
results/run_4213a0/performance_optimized/: payload.py  prompt.txt  response.txt  result.json  solution.py
results/run_4213a0/super_readable/: payload.py  prompt.txt  response.txt  result.json  solution.py
sandbox/: sandbox_runner.py
tests/: test_daytona.py  test_extract_model_answer.py  test_format_payload.py  test_format_prompt.py  test_human_eval_loader.py  test_martian_client.py  test_martian_solution_with_variants.py  test_orchestrator.py  test_single_problem_canonical.py
utils/: format_payload.py  utils.py
variants_marketplace/: ai_research_experimental.json  pythonic_one_line_master.json
