[project]
name = "e2b-code-ensemble"
version = "0.1.0"
description = "An agent that generates 5 solution variants, runs them in E2B sandboxes, and lets users choose the best."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "openai",
    "e2b-code-interpreter",
    "pytest",
    "tabulate",
    "rich",
    "click",
    "python-dotenv",
    "daytona>=0.115.0",
    "datasets>=4.4.1",
    "pydantic>=2.12.4",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
